--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@ jobs:
       - image: ubuntu
     steps:
       - checkout
-      - run: apt-get update && apt-get install openjdk-8-jdk wget xvfb -y && wget https://github.com/cytoscape/cytoscape/releases/download/3.7.2/cytoscape-3.7.2.tar.gz && tar xf cytoscape-3.7.2.tar.gz && rm cytoscape-3.7.2.tar.gz && xvfb-run bash ~/cytoscape-unix-3.7.2/cytoscape.sh
+      - run: apt-get update && apt-get install openjdk-8-jdk wget xvfb -y && wget https://github.com/cytoscape/cytoscape/releases/download/3.7.2/cytoscape-3.7.2.tar.gz && tar xf cytoscape-3.7.2.tar.gz && rm cytoscape-3.7.2.tar.gz && xvfb-run bash ./cytoscape-unix-3.7.2/cytoscape.sh
