--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,6 @@ jobs:
       - checkout
       - run: apt-get update && apt-get install openjdk-8-jdk wget curl xvfb -y && wget https://github.com/cytoscape/cytoscape/releases/download/3.7.2/cytoscape-3.7.2.tar.gz && tar xf cytoscape-3.7.2.tar.gz && rm cytoscape-3.7.2.tar.gz
       - run: xvfb-run bash ./cytoscape-unix-3.7.2/cytoscape.sh &
-      - run: sleep 120 && curl -X GET 'http://localhost:1234/v1/version'
+      - run: pgrep -a cytoscape
+      - run: sleep 180 && curl -X GET 'http://localhost:1234/v1/version'
       
