--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ jobs:
     steps:
       - checkout
       - run: apt-get update && apt-get install openjdk-8-jdk wget curl xvfb -y && wget https://github.com/cytoscape/cytoscape/releases/download/3.7.2/cytoscape-3.7.2.tar.gz && tar xf cytoscape-3.7.2.tar.gz && rm cytoscape-3.7.2.tar.gz
-      - run: xvfb-run bash ./cytoscape-unix-3.7.2/cytoscape.sh &
+      - run: xvfb-run bash ./cytoscape-unix-3.7.2/cytoscape.sh
       - run: pgrep -a cytoscape
-      - run: sleep 180 && curl -X GET 'http://localhost:1234/v1/version'
       
