--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,37 @@
-version: 2
-jobs:
-  one:
-    docker:
-      - image: ubuntu
-    steps:
-      - apt-get update && apt-get install openjdk-8-jdk wget curl xvfb -y && wget https://github.com/cytoscape/cytoscape/releases/download/3.7.2/cytoscape-3.7.2.tar.gz && tar xf cytoscape-3.7.2.tar.gz && rm cytoscape-3.7.2.tar.gz && xvfb-run bash ./cytoscape-unix-3.7.2/cytoscape.sh
-  two:
-    docker:
-      - image: ubuntu
-    steps:
-      - sleep(300) && pgrep -a cytoscape
-
-workflows:
-  version: 2
-    build:
-      jobs:
-        - one
-        - two
+    version: 2
+    jobs:
+        one:
+          docker:
+                - image: circleci/ruby:2.4
+          steps:
+            - echo 1
+        two:
+          docker:
+                - image: circleci/ruby:2.4
+          steps:
+            - echo 2
+        three:
+          docker:
+                - image: circleci/ruby:2.4
+          steps:
+            - echo 3
+        four:
+          docker:
+                - image: circleci/ruby:2.4
+          steps:
+            - echo 4
+        five:
+          docker:
+                - image: circleci/ruby:2.4
+          steps:
+            - echo 5
+    
+    workflows:
+        version: 2
+        build:
+            jobs:
+                - one
+                - two
+                - three
+                - four
+                - five
