--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,18 @@
 version: 2
 jobs:
-    one:
-      docker:
-            - image: circleci/ruby:2.4
-      steps:
-        - echo 1
-    two:
-      docker:
-            - image: circleci/ruby:2.4
-      steps:
-        - echo 2
-
-workflows:
-    version: 2
-    build:
-        jobs:
-            - one
-            - two
+  build:
+    docker:
+      - image: ubuntu
+    steps:
+      - checkout
+      - run:
+          name: Download Cytoscape
+          command: apt-get update && apt-get install openjdk-8-jdk curl xvfb -y && curl -O https://github.com/cytoscape/cytoscape/releases/download/3.7.2/cytoscape-3.7.2.tar.gz && tar xf cytoscape-3.7.2.tar.gz && rm cytoscape-3.7.2.tar.gz
+      - run:
+          name: Start Cytoscape
+          command: xvfb-run bash ./cytoscape-unix-3.7.2/cytoscape.sh
+          background: true
+      - run:
+          name: Check CyREST
+          command: sleep 300 && pgrep -a cytoscape
+          
